# Ifmo-Works

./: .gitignore
Programming/LabWork3/: main.cpp
Programming/LabWork3/builder/: AirplaneBuilder.cpp  AirplaneBuilder.h
Programming/LabWork4/: CMakeLists.txt  XMLParser.cpp  XMLParser.h
